fixed the layout issue and vignette format

--- a/frontend/src/css/LandingPage.css
+++ b/frontend/src/css/LandingPage.css
@@ -28,12 +28,11 @@
 }
 
 .floating-buttons {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+    padding-top: 10%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
   }
   
@@ -45,6 +44,8 @@
     border-radius: 50px;
     cursor: pointer;
     transition: background-color 0.3s;
+    padding: 10px 20px;
+    font-size: 16px;
   }
   
   .floating-button:hover {
